# dns_updater

./: .gitignore  LICENSE  README.md  dns_updater.py  pyproject.toml  requirements-tests.txt  test_dns_updater.py
.github/workflows/: python-app.yml  tests.yml
src/dns_updater/: __init__.py  cache.py  cli.py  config.py  core.py  dns_updater.py  errors.py
tests/: test_cache.py  test_cli.py  test_core.py  test_dns_updater.py
