[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dns_updater"
version = "0.1.0"
authors = [
  { name="Vítor dos Santos Araujo", email="vitor@vitoraraujo.dev" },
]
description = "Script to update a DNS record on Cloudflare."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "python-dotenv"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/vs-araujo/dns_updater"

[tool.pytest.ini_options]
pythonpath = "src"