[project]
name = "dns_updater"
version = "0.1.0"
authors = [
  { name="Vítor dos Santos Araujo", email="vitoraraujo@tuta.com" },
]
description = "Script to update a DNS record on Cloudflare."
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
tests = ["requirements-tests.txt"]

[project.scripts]
update_dns = "dns_updater.cli:main"

[project.urls]
"Homepage" = "https://github.com/vsbits/dns_updater"

[tool.pytest.ini_options]
pythonpath = "src"